[Bug #19016] Handle syntax error in main script like other errors

So that `SyntaxError#detailed_message` will be used also in the case
exiting by such syntax error.